<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tableLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    android:padding="5dp"
    android:stretchColumns="1,2,3"
    tools:context=".CalculatorActivity" >

    <TableRow
        android:id="@+id/tableRow0"
        android:layout_width="match_parent">

        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/total_label" />
	    
	    <EditText
	        android:id="@+id/billTotal"
	        android:layout_height="wrap_content"
	        android:layout_span="3"
	        android:hint="@string/total_hint"
	        android:inputType="numberDecimal" />

    </TableRow>
    
    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent">
        
        <TextView
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_column="1" android:layout_weight="1"
            android:gravity="right"
            android:text="@string/percent10" />

		<TextView
            android:text="@string/percent15"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_column="2" android:layout_weight="1"
            android:gravity="right"
            />

		<TextView
            android:text="@string/percent20"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_column="3" android:layout_weight="1"
            android:gravity="right"
            />
    </TableRow>
    
    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="match_parent">
		
        <TextView
			android:text="@string/tipText"
			android:layout_column="0"
			android:layout_gravity="bottom|right"/>
        
        <EditText
            android:id="@+id/tip10"
            android:layout_column="1"
            android:layout_gravity="right"
            android:focusable="false"
            android:cursorVisible="false"
            android:inputType="numberDecimal"
            android:text="@string/zeroAmount"/>
        
		<EditText android:id="@+id/tip15"
            android:layout_column="2"
            android:text="@string/zeroAmount"
            android:layout_gravity="right"
            android:focusable="false"
            android:cursorVisible="false"
            android:inputType="numberDecimal"/>
        <EditText android:id="@+id/tip20"
            android:layout_column="3"
            android:layout_gravity="right"
            android:gravity="right"
            android:text="@string/zeroAmount"
            android:focusable="false"
            android:cursorVisible="false"
            android:inputType="numberDecimal"/>

    </TableRow>
    
    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="match_parent">
        <TextView
			android:text="@string/totalText"
			android:layout_column="0"
			android:layout_gravity="bottom|right"/>
        
        <EditText android:id="@+id/total10"
            android:layout_column="1"
            android:text="@string/zeroAmount"
            android:layout_gravity="right"
            android:focusable="false"
            android:cursorVisible="false"
            android:inputType="numberDecimal"/>
        <EditText android:id="@+id/total15"
            android:layout_column="2"
            android:text="@string/zeroAmount"
            android:layout_gravity="right"
            android:focusable="false"
            android:cursorVisible="false"
            android:inputType="numberDecimal"/>
        <EditText android:id="@+id/total20"
            android:layout_column="3"
            android:layout_gravity="right"
            android:gravity="right"
            android:text="@string/zeroAmount"
            android:focusable="false"
            android:cursorVisible="false"
            android:inputType="numberDecimal"/>

    </TableRow>
    
    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="match_parent">

        <TextView
            android:layout_column="0"
            android:layout_gravity="center|right"
            android:text="@string/customText" />

        <SeekBar
            android:id="@+id/tipSeekBar"
            android:layout_width="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_span="2"
            android:focusable="false"
            android:max="100"
            android:paddingBottom="5dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="5dp"
            android:progress="18" />

        <TextView
            android:id="@+id/tipCustomDisplay"
            android:layout_column="3"
            android:layout_gravity="center_horizontal" />
        
    </TableRow>
    
    <TableRow android:id="@+id/tableRow5"
        android:layout_width="match_parent">
        <TextView android:text="@string/tipText"
            android:layout_column="0"
            android:layout_gravity="right|bottom"/>

        <EditText
            android:id="@+id/tipCustom"
            android:layout_column="1"
            android:cursorVisible="false"
            android:focusable="false"
            android:gravity="right"
            android:inputType="numberDecimal"
            android:text="@string/zeroAmount" />

        <TextView android:text="@string/totalText"
            android:layout_column="2"
            android:layout_gravity="right|bottom"/>

        <EditText
            android:id="@+id/totalCustom"
            android:layout_column="3"
            android:cursorVisible="false"
            android:focusable="false"
            android:gravity="right"
            android:inputType="numberDecimal"
            android:text="@string/zeroAmount" />

    </TableRow>
    
</TableLayout>